--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.14.0
 annotated-types==0.7.0
 anyio==4.7.0
 blinker==1.9.0
@@ -10,7 +11,9 @@ h11==0.14.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
+Mako==1.3.7
 MarkupSafe==3.0.2
+psycopg2-binary==2.9.10
 pydantic==2.10.3
 pydantic_core==2.27.1
 python-dotenv==1.0.0
